--- a/index.html
+++ b/index.html
@@ -2,63 +2,88 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Evet mi Hayır mı?</title>
   <style>
-    body {
-        background-image: url(mert.jpeg);
-      height: 100vh;
-      margin: 0;
-      background-color: #fff0f6;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      font-family: Arial, sans-serif;
+    * {
+      box-sizing: border-box;
     }
-    img{
-        width: 100%;
-        height: auto;
+
+    body {
+      margin: 0;
+      padding: 0;
+      background-image: url("mert.jpeg");
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      text-align: center;
+    }
+
+    h1, h2 {
+      color: white;
+      text-shadow: 1px 1px 5px black;
+      padding: 0 10px;
     }
 
     .buttons {
       position: relative;
-      width: 300px;
-      height: 200px;
+      width: 100%;
+      max-width: 320px;
+      height: 180px;
+      margin-top: 20px;
     }
 
     button {
-      padding: 12px 24px;
-      font-size: 20px;
-      margin: 10px;
+      padding: 12px 20px;
+      font-size: 18px;
       cursor: pointer;
       position: absolute;
+      border: none;
+      border-radius: 10px;
     }
 
     #evet {
       left: 50%;
       transform: translateX(-50%);
       top: 20px;
-      background-color: #ff69b4;
+      background-color: #28a745;
       color: white;
-      border: none;
-      border-radius: 10px;
     }
 
     #hayir {
       background-color: crimson;
       color: white;
-      border: none;
-      border-radius: 10px;
     }
 
     .video-container {
       display: none;
       margin-top: 30px;
+      width: 100%;
+      max-width: 400px;
     }
 
     iframe {
+      width: 100%;
+      height: 225px;
       border-radius: 12px;
       box-shadow: 0 0 20px rgba(0,0,0,0.2);
+    }
+
+    @media (max-width: 480px) {
+      button {
+        font-size: 16px;
+        padding: 10px 16px;
+      }
+
+      iframe {
+        height: 200px;
+      }
     }
   </style>
 </head>
@@ -72,11 +97,11 @@
 
   <div class="video-container" id="video-container">
     <h2>💖 İşte senin için bir tatlı kedi! 😺</h2>
-    <iframe width="400" height="225"
+    <iframe
       src="https://www.youtube.com/embed/yXWw0_UfSFg?autoplay=1&mute=1"
       title="Tatlı kedi videosu"
       frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allow="autoplay; encrypted-media"
       allowfullscreen>
     </iframe>
   </div>
