--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-image: url("mert.jpeg");
+      background-image: url("WhatsApp Image 2025-07-27 at 14.38.44.jpeg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -88,7 +88,7 @@
   </style>
 </head>
 <body>
-  <h1 id="baslik">Devam etmek istiyor musun?</h1>
+  <h1 id="baslik">Şu Güzeliği Sikmez miydin?</h1>
 
   <div class="buttons">
     <button id="evet">Evet</button>
@@ -96,9 +96,9 @@
   </div>
 
   <div class="video-container" id="video-container">
-    <h2>💖 İşte senin için bir tatlı kedi! 😺</h2>
+    <h2>💖 AYNEN ÖYLEEE  saatlik 2500TL  iletişim için +90 5536990145! 😺</h2>
     <iframe
-      src="https://www.youtube.com/embed/yXWw0_UfSFg?autoplay=1&mute=1"
+      src="https://youtu.be/W3qjKgDYDfc?si=RFCpj86zttVLgV6f"
       title="Tatlı kedi videosu"
       frameborder="0"
       allow="autoplay; encrypted-media"
